wwwroot/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');

:root {
    --dark-gray: #000005;
    --mid-gray: #121215;
    --bright-gray: #19191e;
    --dark-white: #b2b2b2;
    --mid-white: #cecece;
    --bright-white: #ebebeb;
    --red: #d95763;
    --green: #6abe30;
    --blue: #5b6ee1;
    --aqua: #5fcde4;

    --bg-back: var(--dark-gray);
    --bg-mid: var(--mid-gray);
    --bg-front: var(--bright-gray);
    --text-sub: var(--dark-white);
    --text-main: var(--bright-white);
}

.light-mode {
    --bg-back: var(--bright-white);
    --bg-mid: var(--mid-white);
    --bg-front: var(--dark-white);
    --text-sub: var(--bright-gray);
    --text-main: var(--dark-gray);
    color: var(--text-main);
}

h1, h2, h3, h4, h5 {
    margin: inherit;
    color: var(--text-main);
    font-family: "Rubik";
}

body {
    width: 100vw;
    height: 100vh;
    background: var(--bg-back);
    color: var(--text-sub);
    font-family: "Inter";
    margin: 0px;
}

button {
    background: var(--bg-front);
    color: var(--text-main);
    border: none;
    outline: none;
    font: inherit;
    box-sizing: border-box;
    padding: 0.75rem;
    border-radius: 0.25rem;
    cursor: pointer;
    font-weight: 500;
}
button > .button-icon-hover,
button:hover > .button-icon {
    display: none;
}
button:hover > .button-icon-hover { display: inline-block; }
input {
    background: var(--bg-front);
    color: var(--text-main);
    border: none;
    outline: none;
    font: inherit;
    box-sizing: border-box;
    padding: 0.75rem;
    border-radius: 0.25rem;
}
button:hover , input:focus {
    background: var(--text-main);
    color: var(--bg-front);
}
button:disabled {
    background: inherit;
    outline: 2px solid var(--bg-front);
    color: var(--bg-front);
}
button:disabled:hover {
    background: inherit;
    color: var(--bg-front);
    cursor: inherit;
}
button, input {
    margin-top: 0.5rem;
}
.input-big {
    font-size: 1.25rem;
    padding: 1rem;
    border-radius: 0.4rem;
}

a { color: var(--blue); }
a:hover { color: var(--aqua); }

